--- a/AndroidStudioProjects/app/src/main/res/drawable/button_bg.xml
+++ b/AndroidStudioProjects/app/src/main/res/drawable/button_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="#DDE"
+        android:color="@color/grey"
         />
     <corners
         android:radius="100dp"/>
