--- a/AndroidStudioProjects/app/src/main/res/layout/activity_customerpart.xml
+++ b/AndroidStudioProjects/app/src/main/res/layout/activity_customerpart.xml
@@ -19,33 +19,17 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="250dp"
         android:gravity="top"
-        android:text="You login as employee"
+        android:textAlignment="center"
+        android:text="Frontliner"
         android:textSize="32sp"
         tools:layout_editor_absoluteY="330dp"
         tools:layout_editor_absoluteX="50dp"
         android:textColor="#2D9CDB"
         />
 
-    <TextView
-        android:layout_width="319dp"
-        android:layout_height="38dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="40dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="300dp"
-        android:gravity="top"
-        android:text="Running Queue Number"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteY="370dp"
-        tools:layout_editor_absoluteX="50dp"
-        android:textColor="@color/black"
-        />
     <EditText
-
-        tools:layout_editor_absoluteY="350dp"
-        tools:layout_editor_absoluteX="50dp"
-        android:layout_width="323dp"
-        android:layout_height="174dp"
+        android:layout_width="200dp"
+        android:layout_height="120dp"
         android:background="@drawable/bordertopbottom"
         android:text="001"
         android:textColor="@color/black"
@@ -54,17 +38,45 @@
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="40dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="326dp"
+        android:layout_marginTop="310dp"
         />
+
     <Button
-        android:backgroundTint="@color/grey"
-        android:layout_marginLeft="110dp"
-        android:layout_width="200dp"
+        android:layout_width="150dp"
+        android:layout_height="120dp"
+        android:layout_marginLeft="250dp"
+        android:layout_marginTop="310dp"
         android:background="@color/grey"
-        android:layout_height="100dp"
-        android:layout_marginTop="520dp"
+        android:backgroundTint="@color/grey"
         android:text="Change Queue Number"
         android:textColor="@color/black"
-        android:textSize="18dp"
+        android:textSize="18dp" />
+    <TextView
+        android:layout_width="319dp"
+        android:layout_height="38dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="460dp"
+        android:gravity="top"
+        android:text="Remaining Queue Number"
+        android:textSize="32sp"
+        tools:layout_editor_absoluteY="330dp"
+        tools:layout_editor_absoluteX="50dp"
+        android:textColor="@color/black"
+        />
+    <EditText
+        android:backgroundTint="@color/grey"
+        android:layout_width="200dp"
+        android:layout_height="120dp"
+        android:background="@drawable/bordertopbottom"
+        android:text="001"
+        android:textColor="@color/black"
+        android:textSize="100dp"
+        android:textAlignment="center"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="100dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="510dp"
         />
 </RelativeLayout>
