--- a/AndroidStudioProjects/app/src/main/res/layout-v21/activity_login_as_employee.xml
+++ b/AndroidStudioProjects/app/src/main/res/layout-v21/activity_login_as_employee.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".login_as_employee">
-    
+    tools:context=".login_as_customer"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,62 +16,66 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/iphone8plus1" />
+        android:src="@drawable/iphone8plus1"
+        android:contentDescription="@string/todo" />
 
+    <TextView
+        android:layout_width="310dp"
+        android:layout_height="60dp"
+        android:layout_marginLeft= "30dp"
+        android:layout_marginTop="350dp"
+        android:text="Login Employee"
+        android:textColor="#FFF"
+        android:textSize="28dp"
+        />
     <EditText
         android:layout_width="310dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="48dp"
+        android:layout_marginTop="395dp"
+        android:layout_marginLeft="50dp"
         android:background="#D0D9EE"
         android:hint="@string/username"
+        android:importantForAutofill="no"
         android:inputType="text"
-        android:paddingStart="16dp"
+        android:paddingLeft="50dp"
         android:shadowColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.977"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="424dp"
-        android:importantForAutofill="no"
         tools:ignore="MissingConstraints" />
 
-    <TextView
-        android:layout_width="310dp"
-        android:layout_height="60dp"
-        tools:layout_editor_absoluteX="50dp"
-        tools:layout_editor_absoluteY="350dp"
-        android:text="@string/login_employee"
-        android:textColor="#FFF"
-        android:textSize="28sp"
-        tools:ignore="MissingConstraints" />
 
     <EditText
         android:layout_width="310dp"
         android:layout_height="60dp"
+        android:layout_marginTop="470dp"
+        android:layout_marginLeft="50dp"
         android:background="#D0D9EE"
-        android:hint="@string/password"
+        android:hint="@string/username"
         android:importantForAutofill="no"
         android:inputType="text"
-        android:paddingStart="16dp"
+        android:paddingLeft="50dp"
         android:shadowColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.977"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="498dp"
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:layout_width="310dp"
-        android:layout_height="60dp"
+        android:layout_width="345dp"
+        android:layout_height="70dp"
         android:backgroundTint="#D0D9EE"
-        android:text="@string/sign_in"
-        android:textColor="@color/black"
+        android:text="Continue With Facebook"
+        android:textColor="#3a3a3a"
         android:textAllCaps="false"
-        android:textSize="24sp"
-        tools:layout_editor_absoluteX="50dp"
-        tools:layout_editor_absoluteY="590dp"
+        android:textSize="20dp"
+        android:paddingLeft="50dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="540dp"
         android:background="@drawable/button_bg"
-        tools:ignore="MissingConstraints" />
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</RelativeLayout>
