--- a/AndroidStudioProjects/app/src/main/res/layout/activity_login_as_employee.xml
+++ b/AndroidStudioProjects/app/src/main/res/layout/activity_login_as_employee.xml
@@ -52,7 +52,7 @@
         android:layout_marginTop="470dp"
         android:layout_marginLeft="50dp"
         android:background="#D0D9EE"
-        android:hint="@string/username"
+        android:hint="@string/password"
         android:importantForAutofill="no"
         android:inputType="text"
         android:paddingLeft="50dp"
@@ -75,6 +75,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="540dp"
         android:background="@drawable/button_bg"
+        android:id="@+id/buttonsignin"
         />
 
 
