--- a/AndroidStudioProjects/app/src/main/res/layout/activity_login_as_customer.xml
+++ b/AndroidStudioProjects/app/src/main/res/layout/activity_login_as_customer.xml
@@ -59,6 +59,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="410dp"
         android:background="@drawable/button_bg"
+        android:id="@+id/buttonlogingmail"
         />
     <Button
         android:layout_width="345dp"
@@ -72,6 +73,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="490dp"
         android:background="@drawable/button_bg"
+        android:id="@+id/buttonloginfacebook"
         />
 
     <Button
